 <resources>
    <string name="app_name">RecyclerView 4.5</string>
    <string name="action_settings">Settings</string>

</resources>